--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,8 @@
-server.port =9090
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=CallDetailsdb
+spring.datasource.password=CallDetailsdb
+spring.datasource.driver-class=oracle.jdbc.driver.OracleDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
